--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #c013f5;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -60,7 +60,7 @@ footer p {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #f5ba13;
+  color: #c013f5;
   border: none;
   width: 36px;
   height: 36px;
@@ -91,7 +91,7 @@ form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background: #c013f5;
   color: #fff;
   border: none;
   border-radius: 50%;
